# aimbot

./: .gitignore  README.md
aimbot-backend/: README.md  pyproject.toml
aimbot-backend/aimbot/: cache.py  email_renderer.py  main.py
aimbot-backend/aimbot/models/: emails.py  news.py  radio.py
aimbot-backend/aimbot/radio/: elabs.py  radio_news.py
aimbot-backend/aimbot/scrapers/: config.py  family_notices.py  weather.py
aimbot-backend/aimbot/scrapers/news/: base.py  be.py  ge.py  jep.py
aimbot-backend/aimbot/templates/: aim_premium_template.html  be_template.html  be_template_backup.html  connect_insider_gsy.html  extract_template.py  ge_template.html  ge_template_backup.html  jep_template.html  spon_con.eml  spon_con.html  test_gsy_email.eml  test_jep_email.eml  test_jep_email.html
aimbot-backend/templates/: be_template.html
aimbot-backend/tests/: test_email.py  test_family_notices.py  test_news.py  test_weather.py
aimbot-frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
aimbot-frontend/src/lib/: config.ts
aimbot-frontend/src/lib/components/: ArrayEditor.svelte  EmailEditor.svelte
aimbot-frontend/src/lib/stores/: emailStore.ts  renderedEmailStore.ts
aimbot-frontend/src/lib/types/: api.d.ts
aimbot-frontend/src/routes/: +layout.svelte
aimbot-frontend/src/routes/aim_premium/: +page.svelte
aimbot-frontend/src/routes/be_email/: +page.svelte
aimbot-frontend/src/routes/ge_email/: +page.svelte
aimbot-frontend/src/routes/insider_gsy/: +page.svelte
aimbot-frontend/src/routes/insider_jsy/: +page.svelte
(+2 files in other folders)
